# Palsa

./: .gitignore  Cargo.toml  README.md
assets/: default_ableton_colors.txt
assets/palsa/: default-colors.txt
examples/Mr. Bill - Pastel Project/: Mr. Bill - Pastel.als
src/: cache.rs  extract.rs  macros.rs  main.rs  palsa.rs  parallel.rs  parse.rs
src/gui/: gui.rs  mod.rs  preview.rs  tabs.rs  windows.rs
src/parse/: als.rs  clip.rs  group.rs  mod.rs  track.rs
