[package]
name = "palsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For parsing xml
roxmltree = "0.19.0"

# For creating yaml out of other data types
serde_yaml = "0.9.33"
serde = { version = "1.0.201", features = ["derive"] }

# For extracting the als file to an xml
flate2 = { version = "1.0.17", features = [
    "zlib-ng",
], default-features = false }

# For parralel file loading, extracting and parsing
rayon = "1.7"

# Nice terminal stuff yay
colored = "2.0"
